// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can mixin a struct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can mixin another projen struct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
}
"
`;

exports[`can update props 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * New summary
   * @stability stable
   * @pjnew "newVal"
   */
  readonly projenCodeDir: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can updateAll props 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability stable
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability stable
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default ".projenrc.ts"
   * @stability stable
   */
  readonly filename?: string;
}
"
`;

exports[`can use struct as type in add 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

/**
 * MyInterface
 */
export interface MyInterface {
  /**
   * Whether to use \`SWC\` for ts-node.
   * @default false
   * @stability experimental
   */
  readonly swc?: boolean;
  /**
   * A directory tree that may contain *.ts files that can be referenced from your projenrc typescript file.
   * @default "projenrc"
   * @stability experimental
   */
  readonly projenCodeDir?: string;
  /**
   * The name of the projenrc file.
   * @default .projenRC.ts
   * @stability experimental
   */
  readonly filename?: string;
}
"
`;

exports[`can use struct as type in add 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
import { MyInterface } from './';

/**
 * MyBaseInterface
 */
export interface MyBaseInterface {
  /**
   * My new Summary
   */
  readonly projenrcTsOptions: MyInterface;
}
"
`;
